# esp-partition-table

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: entry.rs  estor.rs  lib.rs  norfl.rs  result.rs  table.rs  types.rs  utils.rs
tests/: partitions-ota.csv  partitions.csv
